apply plugin: 'com.android.application'

android {
    compileSdk 32
    compileSdkVersion 32
    buildToolsVersion '30.0.2'

    defaultConfig {
        applicationId "de.trundicho.warpreader"
        minSdkVersion 29
        targetSdkVersion 32
        versionCode 8
        versionName "2.5"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }

    packagingOptions {
        pickFirst '**'
    }

    useLibrary 'org.apache.http.legacy'
}

repositories {
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    testImplementation 'junit:junit:4.13.2'
    implementation('com.github.Trundicho:warp-reader-core:v1.0.2')
    implementation 'com.github.BartoszJarocki:android-boilerpipe:master'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

}


configurations.all {
    //https://docs.gradle.org/current/dsl/org.gradle.api.artifacts.ResolutionStrategy.html
    resolutionStrategy {
        // fail eagerly on version conflict (includes transitive dependencies)
        // e.g. multiple different versions of the same dependency (group and name are equal)
        failOnVersionConflict()

        // prefer modules that are part of this build (multi-project or composite build) over external modules
        preferProjectModules()

        // cache dynamic versions for 10 minutes
        cacheDynamicVersionsFor 10 * 60, 'seconds'
        // don't cache changing modules at all
        cacheChangingModulesFor 0, 'seconds'

    }
}
